# cursor-proxmox-mcp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  PUBLISHING.md  README.md  SECURITY.md  SETUP.md  agentify.sh  claude_desktop_config.json  glama.json  pyproject.toml  server.json  setup.py  start.bat  start.sh  start_openapi.sh  start_proxmox_mcp.sh
.cursor/research/: agent-feedback-log.md  changelog-notes.md  decisions.md  design-audit.md  next-expansion.md  proxmox-api-coverage.md  revisions.md  security-review.md
.cursor/rules/: api-coverage.mdc  closed-nongoals.mdc  keep-docs-aligned.mdc  lxc-exec-ssh.mdc  next-expansion.mdc  proxmox-auth.mdc
.github/workflows/: ci.yml  codeql.yml  publish-mcp.yml  publish.yml  release.yml
docs/: api-coverage.md
docs/community/: README.md  cursor-forum-draft.md  github-discussion-draft.md  reddit-draft.md
docs/examples/: claude_desktop_config.example.json  cursor_mcp.example.json
docs/wiki/: Example-prompts.md  Home.md  README.md  Recipes.md  Setup.md  Tools.md  Troubleshooting.md  _Footer.md  _Sidebar.md
proxmox-config/: README.md  config.example.json
scripts/: __init__.py  ci-local.ps1  ci-local.sh  community_drafts.py  generate-wiki-tools.py  post-community.ps1  post-community.sh  sync-wiki.ps1  sync-wiki.sh
src/proxmox_mcp/: __init__.py  errors.py  server.py
src/proxmox_mcp/config/: loader.py  models.py
src/proxmox_mcp/core/: log_filters.py  logging.py  proxmox.py  tool_audit.py
src/proxmox_mcp/formatting/: __init__.py  colors.py  components.py  formatters.py  templates.py  theme.py
src/proxmox_mcp/ssh/: __init__.py  pct.py
src/proxmox_mcp/tools/: access.py  acme.py  backup.py  base.py  capabilities.py  ceph.py  cluster.py  container.py  definitions.py  firewall.py  guest.py  guest_power.py  ha.py  helpers.py  inventory.py  migrate.py  network.py  node.py  pool.py  register.py  replication.py  sdn.py  snapshot.py  spec.py  storage.py  tasks.py  vm.py
src/proxmox_mcp/tools/console/: manager.py
src/proxmox_mcp/utils/: auth.py
tests/: conftest.py  expected_tools.py  test_access_tools.py  test_acl_denied_ux.py  test_base.py  test_community_drafts.py  test_config.py  test_console_manager.py  test_container_tools.py  test_design_invariants.py  test_domain_tools.py  test_error_paths.py  test_errors.py  test_formatting.py  test_guest.py  test_guest_power.py  test_helpers.py  test_invoke_all_tools.py  test_logging.py  test_lxc_agent_ux.py  test_phase_b_tools.py  test_phase_c_light.py  test_phase_c_remainder.py  test_phase_f1.py  test_phase_f_lxc_day2.py  test_post_r11_slices.py  test_proxmox_manager.py  test_qol_revisions.py  test_server.py  test_smoke.py  test_tools_unit.py  test_vm_console.py  test_vm_tools.py  test_wiki_tools.py
tests/fakes/: __init__.py  proxmox.py
