[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proxmox-mcp"
version = "0.2.0"
description = "Formal Cursor MCP server for Proxmox VE — VMs, LXC, storage, HA, firewall, access"
requires-python = ">=3.9"
authors = [
    {name = "hackmods"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["proxmox", "mcp", "cursor", "virtualization", "qemu", "lxc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "mcp>=0.2.0",
    "proxmoxer>=2.0.1,<3.0.0",
    "requests>=2.31.0,<3.0.0",
    "pydantic>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<9.0.0",
    "black>=23.0.0,<25.0.0",
    "mypy>=1.0.0,<2.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "ruff>=0.1.0,<1.0.0",
    "types-requests>=2.31.0,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/hackmods/cursor-proxmox-mcp"
Documentation = "https://github.com/hackmods/cursor-proxmox-mcp/blob/main/docs/api-coverage.md"
Repository = "https://github.com/hackmods/cursor-proxmox-mcp.git"
Issues = "https://github.com/hackmods/cursor-proxmox-mcp/issues"

[project.scripts]
proxmox-mcp = "proxmox_mcp.server:main"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# Keep CI focused on real bugs; avoid mass churn on legacy import order.
select = ["E9", "F63", "F7", "F82", "F401", "F841"]
ignore = ["E501"]
